syntax highlight: let/in

--- a/preamble.tex
+++ b/preamble.tex
@@ -167,9 +167,9 @@
 \lstdefinestyle{haskell}{
     language=Haskell,
     basicstyle=\scriptsize\ttfamily,
-    deletekeywords={case,class,data,default,deriving,instance,of,type,where},
+    deletekeywords={case,class,data,default,deriving,in,instance,let,of,type,where},
     morekeywords={[2]class,data,default,deriving,family,instance,type,where},
-    morekeywords={[3]case,of},
+    morekeywords={[3]in,let,case,of},
     literate=
         {\\}{{$\lambda$}}1
         {\\\\}{{\char`\\\char`\\}}1
